--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -1,10 +1,18 @@
 * {padding: 0; margin: 0; list-style: none;}
+html, body {height: 100%;}
+body {font-size: 14px;}
+ul {margin-bottom: 0;}
+ul, li {list-style: none;}
 a.def:link,
 a.def:active,
 a.def:focus,
 a.def:visited,
 a.def, textarea {font: inherit; text-decoration: none;}
 
-html, body {height: 100%;}
-body {font-size: 14px;}
-ul, li {list-style: none;}
+.fl {float: left; position: relative;}
+.fr {float: right; position: relative;}
+.c {text-align: center; position: relative;}
+.ib {display: inline-block; position: relative;}
+.relative {position: relative;}
+.space {padding: 15px; position: relative;}
+.flex-layout {display: flex;}
