--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -1,6 +1,6 @@
 * {padding: 0; margin: 0; list-style: none;}
 html, body {height: 100%;}
-body {font-size: 14px; background: #f3f6f9;}
+body {font-size: 14px; background: #fafbfc;}
 ul {margin-bottom: 0;}
 ul, li {list-style: none;}
 a.def:link,
@@ -16,8 +16,13 @@ a.def, textarea {color: inherit; text-decoration: none;}
 .ib {display: inline-block; position: relative;}
 .relative {position: relative;}
 .space {padding: 15px; position: relative;}
+.nowrap {white-space: nowrap;}
 .ellipsis {overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.line-2 {line-height: 1.5em; max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .abs {position: absolute; left: 0; top: 0; right: 0; bottom: 0;}
+.oh {overflow: hidden;}
+.af:after
+.lmr:after {content: ""; display: block; clear: both;}
 
 .flex {display: flex;}
 .flex > * {flex: 1;}
@@ -31,6 +36,23 @@ a.def, textarea {color: inherit; text-decoration: none;}
   tr {
     td:nth-child(1) {
       width: 1px; white-space: nowrap;
+    }
+  }
+}
+
+.article-list {
+  & > section {
+    margin-bottom: 30px;
+    .title {
+
+    }
+    .desc {
+
+    }
+    .rich {
+      & > .ib {
+        margin-right: 10px;
+      }
     }
   }
 }
