--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -1,3 +1,12 @@
+/* 
+  text-muted
+  text-primary
+  text-success
+  text-info
+  text-warning
+  text-danger
+*/
+
 *::-webkit-scrollbar {width: 8px; height: 8px}
 *::-webkit-scrollbar-track-piece {background: #ccc; background: transparent;}
 *::-webkit-scrollbar-thumb:horizontal,
@@ -8,7 +17,7 @@
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
 }
-html, body {height: 100%;}
+html, body {height: 100%; overflow: hidden;}
 body {font-size: 14px;}
 ul {margin-bottom: 0;}
 ul, li {list-style: none;}
@@ -17,6 +26,9 @@ a.def:hover,
 a.def:visited,
 a.def:active,
 a.def {color: inherit; text-decoration: none;}
+a:hover,
+a:link,
+a {text-decoration: none;}
 
 .fl {float: left; position: relative;}
 .fr {float: right; position: relative;}
@@ -27,17 +39,25 @@ a.def {color: inherit; text-decoration: none;}
 .p {cursor: pointer;}
 .ho {overflow: hidden;}
 .ellipsis {overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
-.auto-scroll {position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: auto;}
-.wrap {max-width: 900px; margin: 0 auto; padding: 0 15px;}
-.nowrap {white-space: nowrap;}
+.abs,
+.auto-scroll {position: absolute; left: 0; top: 0; right: 0; bottom: 0;}
+.auto-scroll {overflow: auto;}
+.wrap {max-width: 1000px; margin: 0 auto; padding: 0 15px;}
+.no-wrap {white-space: nowrap;}
 .line-2 {max-height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .lmr:after,
 .af:after {content: ""; display: block; clear: both;}
 .no-select {user-select: none;}
 
 .lmr {
-  & > .fl {margin-right: 20px;}
-  & > .fr {margin-left: 20px;}
+  & > .fl {margin-right: 15px;}
+  & > .fr {margin-left: 15px;}
+  &.lmr-panel {
+    height: 100%;
+    & > div {padding-top: 20px; height: 100%; overflow: auto;}
+    & > .fl {padding-right: 5px;}
+    & > .fr {padding-left: 5px;}
+  }
 }
 
 .text-lg {font-size: 18px;}
