--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -7,11 +7,12 @@
   text-danger
 */
 
-*::-webkit-scrollbar {width: 8px; height: 8px}
-*::-webkit-scrollbar-track-piece {background: #ccc; background: transparent;}
-*::-webkit-scrollbar-thumb:horizontal,
-*::-webkit-scrollbar-thumb:vertical {border-radius: 10px; background: #E7E7E7;}
-
+@media (min-width: 800px) {
+  *::-webkit-scrollbar {width: 8px; height: 8px}
+  *::-webkit-scrollbar-track-piece {background: #ccc; background: transparent;}
+  *::-webkit-scrollbar-thumb:horizontal,
+  *::-webkit-scrollbar-thumb:vertical {border-radius: 10px; background: #E7E7E7;}
+}
 * {padding: 0; margin: 0; font: inherit; box-sizing: border-box; vertical-align: middle;
   -webkit-overflow-scrolling: touch;
   -webkit-tap-highlight-color: transparent;
@@ -37,7 +38,7 @@ a {text-decoration: none;}
 .space {padding: 15px; position: relative;}
 .relative {position: relative;}
 .p {cursor: pointer;}
-.ho {overflow: hidden;}
+.ho {overflow: hidden; position: relative;}
 .ellipsis {overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .abs,
 .auto-scroll {position: absolute; left: 0; top: 0; right: 0; bottom: 0;}
@@ -48,6 +49,7 @@ a {text-decoration: none;}
 .lmr:after,
 .af:after {content: ""; display: block; clear: both;}
 .no-select {user-select: none;}
+.pt {padding-top: 20px;}
 
 .lmr {
   & > .fl {margin-right: 15px;}
