--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -1,77 +1,49 @@
-/* 
-  text-muted
-  text-primary
-  text-success
-  text-info
-  text-warning
-  text-danger
-*/
-
 @media (min-width: 800px) {
   *::-webkit-scrollbar {width: 8px; height: 8px}
-  *::-webkit-scrollbar-track-piece {background: #ccc; background: transparent;}
+  *::-webkit-scrollbar-track-piece {background: #ccc; background: rgba(255,255,255,1);}
   *::-webkit-scrollbar-thumb:horizontal,
-  *::-webkit-scrollbar-thumb:vertical {border-radius: 10px; background: #E7E7E7;}
+  *::-webkit-scrollbar-thumb:vertical {border-radius: 10px; background: #ddd;}
 }
-* {padding: 0; margin: 0; font: inherit; box-sizing: border-box; vertical-align: middle;
-  -webkit-overflow-scrolling: touch;
+
+* {padding: 0; margin: 0; color: inherit; 
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
+  -webkit-overflow-scrolling: touch;
 }
-html, body {height: 100%; overflow: hidden;}
-body {font-size: 14px;}
+html, body {height: 100%;}
+body {background: #000;}
 ul {margin-bottom: 0;}
 ul, li {list-style: none;}
-a.def:link,
-a.def:hover,
-a.def:visited,
-a.def:active,
-a.def {color: inherit; text-decoration: none;}
-a:hover,
 a:link,
-a {text-decoration: none;}
+a:hover,
+a:visited,
+a:active,
+a {color: inherit; text-decoration: none;}
 
-.fl {float: left; position: relative;}
-.fr {float: right; position: relative;}
-.c {text-align: center; position: relative;}
-.ib {display: inline-block; position: relative;}
-.space {padding: 15px; position: relative;}
-.relative {position: relative;}
-.p {cursor: pointer;}
-.ho {overflow: hidden; position: relative;}
-.ellipsis {overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
-.abs,
-.auto-scroll {position: absolute; left: 0; top: 0; right: 0; bottom: 0;}
-.auto-scroll {overflow: auto;}
-.wrap {max-width: 1000px; margin: 0 auto; padding: 0 15px;}
-.no-wrap {white-space: nowrap;}
-.line-2 {max-height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
-.lmr:after,
-.af:after {content: ""; display: block; clear: both;}
-.no-select {user-select: none;}
-.pt {padding-top: 20px;}
-
-.lmr {
-  & > .fl {margin-right: 15px;}
-  & > .fr {margin-left: 15px;}
-  &.lmr-panel {
-    height: 100%;
-    & > div {padding-top: 20px; height: 100%; overflow: auto;}
-    & > .fl {padding-right: 5px;}
-    & > .fr {padding-left: 5px;}
-  }
-}
-
-.text-lg {font-size: 18px;}
+.text-lg {font-size: 20px;}
+.text-big {font-size: 18px;}
 .text-bigger {font-size: 16px;}
-.text-normal {font-size: 14px;}
+.text-normal {font-size:  14px;}
 .text-sm {font-size: 13px;}
 .text-xs {font-size: 12px;}
 
-.text-gray {color: #666;}
-.text-pale {color: #999;}
+.p {cursor: pointer;}
+.c {text-align: center; position: relative;}
+.h {height: 100%; position: relative;}
+.fl {float: left; position: relative;}
+.fr {float: right; position: relative;}
+.ib {display: inline-block; position: relative;}
+.wrap {max-width: 800px; margin: 0 auto; position: relative; padding: 0 15px;}
+.ellipsis {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; position: relative;}
+.line-2 {max-height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2;}
+.pt {padding-top: 20px; position: relative;}
+.ho {overflow: hidden; position: relative;}
+.no-select {user-select: none;}
 
-.flex-layout {height: 100%; display: flex; flex-direction: column; position: relative;}
-.flex-layout.row {flex-direction: row;}
-.flex-layout > * {position: relative;}
-.flex-layout > .auto-flex {flex: 1; overflow: auto;}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
