--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -1,9 +1,9 @@
-@media (min-width: 800px) {
+/* @media (min-width: 800px) {
   *::-webkit-scrollbar {width: 8px; height: 8px}
   *::-webkit-scrollbar-track-piece {background: #ccc; background: rgba(255,255,255,1);}
   *::-webkit-scrollbar-thumb:horizontal,
   *::-webkit-scrollbar-thumb:vertical {border-radius: 10px; background: #ddd;}
-}
+} */
 
 * {padding: 0; margin: 0; color: inherit; 
   -webkit-tap-highlight-color: transparent;
@@ -14,11 +14,11 @@ html, body {height: 100%;}
 body {background: #000;}
 ul {margin-bottom: 0;}
 ul, li {list-style: none;}
-a:link,
-a:hover,
-a:visited,
-a:active,
-a {color: inherit; text-decoration: none;}
+a.def:link,
+a.def:hover,
+a.def:visited,
+a.def:active,
+a.def {color: inherit; text-decoration: none;}
 
 .text-lg {font-size: 20px;}
 .text-big {font-size: 18px;}
@@ -27,23 +27,27 @@ a {color: inherit; text-decoration: none;}
 .text-sm {font-size: 13px;}
 .text-xs {font-size: 12px;}
 
+.text-normal {color: #333;}
+.text-gray {color: #666;}
+.text-pale {color: #999;}
+
 .p {cursor: pointer;}
 .c {text-align: center; position: relative;}
 .h {height: 100%; position: relative;}
 .fl {float: left; position: relative;}
 .fr {float: right; position: relative;}
 .ib {display: inline-block; position: relative;}
-.wrap {max-width: 800px; margin: 0 auto; position: relative; padding: 0 15px;}
+.wrap {max-width: 900px; margin: 0 auto; position: relative; padding: 0 15px;}
 .ellipsis {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; position: relative;}
 .line-2 {max-height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2;}
 .pt {padding-top: 20px; position: relative;}
+.relative {position: relative;}
+.space {padding: 15px; position: relative;}
 .ho {overflow: hidden; position: relative;}
 .no-select {user-select: none;}
+.visible-hide {opacity: 0; pointer-events: none;}
 
 
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
-}
-.fade-enter, .fade-leave-to {
-  opacity: 0;
-}
+.fade-enter-active, .fade-leave-active {transition: opacity .5s;}
+.fade-enter, .fade-leave-to {opacity: 0;}
+
