--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,9 @@
 .avatar {width: 60px; height: 60px; background: #eee no-repeat center / cover; border-radius: 4px;}
 
+.btn-box {
+  .btn {margin-right: 8px;}
+}
+
 .table-layout {
   table-layout: fixed;
   * {
@@ -9,7 +13,12 @@
 
 .table-form {
   width: 100%; white-space: nowrap;
-  td {padding: 5px;}
+  td {
+    padding: 5px;
+    &:nth-child(2n+1) {
+      width: 10px;
+    }
+  }
 }
 
 .lmr {
@@ -32,10 +41,11 @@
 }
 
 .mask {
-  width: 100%; height: 100%; position: fixed; left: 0; top: 0; z-index: 200; background: rgba(0,0,0,.5);
-  display: flex; align-items: center; justify-content: center;
+  width: 100%; height: 100%; position: fixed; left: 0; top: 0; z-index: 200; background: rgba(0,0,0,.5); overflow: auto; padding: 15px; text-align: center;
+  &:after {content: ""; display: inline-block; height: 100%; vertical-align: middle;}
   & > .inner {
-    min-width: 260px; min-height: 120px; background: #fff; border-radius: 4px; overflow: hidden; position: relative;
+    min-width: 260px; min-height: 120px; background: #fff; border-radius: 4px; text-align: left;
+    vertical-align: middle; display: inline-block; overflow: hidden; position: relative;
     .gray-title {
       line-height: 36px; border-bottom: 1px solid #ddd; background: #eee; text-align: center;
     }
