--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -46,7 +46,7 @@ a.def {color: inherit; text-decoration: none;}
 .ho {overflow: hidden; position: relative;}
 .no-select {user-select: none;}
 .visible-hide {opacity: 0; pointer-events: none;}
-
+.btn {position: relative;}
 
 .fade-enter-active, .fade-leave-active {transition: opacity .5s;}
 .fade-enter, .fade-leave-to {opacity: 0;}
