--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -1,9 +1,9 @@
-/* @media (min-width: 800px) {
+@media (min-width: 800px) {
   *::-webkit-scrollbar {width: 8px; height: 8px}
   *::-webkit-scrollbar-track-piece {background: #ccc; background: rgba(255,255,255,1);}
   *::-webkit-scrollbar-thumb:horizontal,
   *::-webkit-scrollbar-thumb:vertical {border-radius: 10px; background: #ddd;}
-} */
+}
 
 * {padding: 0; margin: 0; color: inherit; 
   -webkit-tap-highlight-color: transparent;
@@ -46,6 +46,7 @@ a.def {color: inherit; text-decoration: none;}
 .ho {overflow: hidden; position: relative;}
 .no-select {user-select: none;}
 .visible-hide {opacity: 0; pointer-events: none;}
+.white-bg {background: #fff;}
 .btn {position: relative;}
 
 .fade-enter-active, .fade-leave-active {transition: opacity .5s;}
