--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -7,7 +7,7 @@
   }
 }
 
-.my-wrap {
+.my-wrapper {
   padding-top: 20px;
   .box-avatar {
     margin-bottom: 20px;
@@ -17,7 +17,7 @@
   }
   .alters {
     ul {
-      line-height: 2em; margin-bottom: 20px;
+      line-height: 2.4em; margin-bottom: 20px;
       li {
         &.on {
           color: #09f;
